# deeppierce

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
DeepPierce/: __init__.py  config.py  main.py  models.py
DeepPierce/agent/: __init__.py  agent.py  prompts.py  tools.py
DeepPierce/bridge/: __init__.py  burp.py
DeepPierce/crawler/: __init__.py  js_extractor.py
DeepPierce/enrich/: __init__.py  dictionary.py  patterns.py  rules.py
DeepPierce/gui/: app.py  main_window.py
DeepPierce/gui/widgets/: agent_log.py  diff_view.py  endpoint_detail.py  endpoint_list.py  findings_table.py  js_extractor.py  noise_table.py  pending_ops.py  settings_dialog.py
DeepPierce/gui/workers/: agent_worker.py
