[project]
name = "deeppierce"
version = "1.0.0"
description = "DeepPierce — AI Agent for API penetration testing. Deeply understands API semantics, then pierces through defenses."
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "shifu" }]

dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "pydantic>=2.0",
    "httpx>=0.27",
    "anthropic>=0.39",
    "pyyaml>=6.0",
    "anyio>=4.0",
    "beautifulsoup4>=4.12",
    "PySide6>=6.8",
]

[project.scripts]
deeppierce = "DeepPierce.main:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["DeepPierce*"]
